# PixelPP

./: CMakeLists.txt  LICENSE  README.md
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
src/: ControlPanel.cpp  ControlPanel.h  Editor.cpp  Editor.h  ImagePanel.cpp  ImagePanel.h  ImageProcessor.cpp  ImageProcessor.h  ImageTexture.cpp  ImageTexture.h  Window.cpp  Window.h  main.cpp
